crates/squawk_linter/src/rules/snapshots/squawk_linter__rules__adding_not_null_field__test__pg12_cross_migration_validate_no_drop_err.snap
---
source: crates/squawk_linter/src/rules/adding_not_null_field.rs
expression: "lint_errors_with(sql, LinterSettings\n{\n    pg_version: \"12\".parse().expect(\"Invalid PostgreSQL version\"),\n    ..Default::default()\n}, Rule::AddingNotNullableField)"
---
warning[adding-not-nullable-field]: Setting a column `NOT NULL` blocks reads while the table is scanned.
  ╭▸ 
3 │ ALTER TABLE foo ALTER COLUMN bar SET NOT NULL;
  │                                  ━━━━━━━━━━━━
  │
  ╰ help: Make the field nullable and use a `CHECK` constraint instead.
