crates/squawk_linter/src/rules/snapshots/squawk_linter__rules__adding_not_null_field__test__regression_gh_issue_519.snap
---
source: crates/squawk_linter/src/rules/adding_not_null_field.rs
expression: "lint_errors(sql, Rule::AddingNotNullableField)"
---
error[AddingNotNullableField]: Setting a column `NOT NULL` blocks reads while the table is scanned.
  ╭▸ 
4 │ ALTER TABLE my_table ALTER COLUMN my_column SET NOT NULL;
  │                                             ━━━━━━━━━━━━
  │
  ╰ help: Make the field nullable and use a `CHECK` constraint instead.
