crates/squawk_linter/src/rules/snapshots/squawk_linter__rules__adding_not_null_field__test__regression_gh_issue_628_pg11_with_validated_check_err.snap
---
source: crates/squawk_linter/src/rules/adding_not_null_field.rs
assertion_line: 305
expression: "lint_errors_with(sql, LinterSettings\n{\n    pg_version: \"11\".parse().expect(\"Invalid PostgreSQL version\"),\n    ..Default::default()\n}, Rule::AddingNotNullableField)"
---
warning[adding-not-nullable-field]: Setting a column `NOT NULL` blocks reads while the table is scanned.
  ╭▸ 
9 │ ALTER TABLE foo ALTER COLUMN bar SET NOT NULL;
  │                                  ━━━━━━━━━━━━
  │
  ╰ help: Make the field nullable and use a `CHECK` constraint instead.
